--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
         <p>
             My hope is to inspire builders and believers to step boldly into the future while walking on the roads of tradition.
         </p>
+
+        <p>
+            I'm available to startups and small businesses for consulting related to strategy, operations, and technology. My background leading and managing 
+            software teams have given me a wealth of experience working cross-functionally across all levels of an organization. If you'd like to work together or 
+            get in touch, email me at robertsapunarich @ gmail dot com.
+        </p>
     </main>
 
     <footer>
